crates/postgres-subsystem/postgres-core-builder/src/snapshots/with_annotations.snap
---
source: crates/postgres-subsystem/postgres-core-builder/src/resolved_builder.rs
expression: resolved
---
values:
  - - ~
    - Primitive:
        Plain: Boolean
  - - ~
    - Primitive:
        Plain: Int
  - - ~
    - Primitive:
        Plain: Float
  - - ~
    - Primitive:
        Plain: Decimal
  - - ~
    - Primitive:
        Plain: String
  - - ~
    - Primitive:
        Plain: LocalTime
  - - ~
    - Primitive:
        Plain: LocalDateTime
  - - ~
    - Primitive:
        Plain: LocalDate
  - - ~
    - Primitive:
        Plain: Instant
  - - ~
    - Primitive:
        Plain: Json
  - - ~
    - Primitive:
        Plain: Blob
  - - ~
    - Primitive:
        Plain: Uuid
  - - ~
    - Primitive:
        Plain: Vector
  - - ~
    - Composite:
        name: Concert
        plural_name: Concerts
        representation: Managed
        root_visible: true
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - custom_id
            self_column: true
            is_pk: true
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint:
              type: Explicit
              data:
                dbtype: bigint
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value:
              AutoIncrement: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: title
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_names:
              - custom_title
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint:
              type: String
              data:
                max_length: 12
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: venue
            typ:
              Plain:
                type_name: Venue
                is_primitive: false
            column_names:
              - custom_venue_id
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: Unbounded
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: reserved
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - reserved
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint:
              type: Int
              data:
                bits: ~
                range:
                  - 0
                  - 300
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: time
            typ:
              Plain:
                type_name: Instant
                is_primitive: true
            column_names:
              - time
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint:
              type: DateTime
              data:
                precision: 4
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: price
            typ:
              Plain:
                type_name: Decimal
                is_primitive: true
            column_names:
              - price
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint:
              type: Decimal
              data:
                precision: 10
                scale: 2
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
        table_name:
          name: custom_concerts
          schema: ~
        access:
          default: ~
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
        doc_comments: ~
  - - ~
    - Composite:
        name: Venue
        plural_name: Venuess
        representation: Managed
        root_visible: true
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - custom_id
            self_column: true
            is_pk: true
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value:
              AutoIncrement: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: name
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_names:
              - custom_name
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: concerts
            typ:
              List:
                Plain:
                  type_name: Concert
                  is_primitive: false
            column_names:
              - custom_venue_id
            self_column: false
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: One
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: capacity
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - capacity
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint:
              type: Int
              data:
                bits: 16
                range: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
          - name: latitude
            typ:
              Plain:
                type_name: Float
                is_primitive: true
            column_names:
              - latitude
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint:
              type: Float
              data:
                bits: 24
                range: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
            computed: ~
        table_name:
          name: venues
          schema: ~
        access:
          default: ~
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
        doc_comments: ~
  - ~
map:
  Blob:
    index: 10
    generation: ~
  Boolean:
    index: 0
    generation: ~
  Concert:
    index: 13
    generation: ~
  Decimal:
    index: 3
    generation: ~
  Float:
    index: 2
    generation: ~
  Instant:
    index: 8
    generation: ~
  Int:
    index: 1
    generation: ~
  Json:
    index: 9
    generation: ~
  LocalDate:
    index: 7
    generation: ~
  LocalDateTime:
    index: 6
    generation: ~
  LocalTime:
    index: 5
    generation: ~
  String:
    index: 4
    generation: ~
  Uuid:
    index: 11
    generation: ~
  Vector:
    index: 12
    generation: ~
  Venue:
    index: 14
    generation: ~
